test/error/parsing_files/type_as_binding07.err
File "parsing_files/type_as_binding07.st", line 1, characters 5-9:
1 | f x type := g ().
        ^^^^
Error: Syntax error.
Hint: Is not a correct binding.
